--- a/html/index.css
+++ b/html/index.css
@@ -1,22 +1,3 @@
-.img1{
-  background-image: url("img/1.png");
-  position: absolute;
-  display: inline-block;
-  right: 0;
-  height: 500px;
-  width: 761px;
-}
-
-.img2{
-  background-image: url("img/3.png");
-  background-position: bottom left;
-  position: absolute;
-  display: inline-block;
-  height: 500px;
-  width: 579px;
-  margin-top: 550px;
-}
-
 .header  {
   display: flex;
   height: 110px;
@@ -33,6 +14,7 @@
   height: 100px;
   margin-left:5px;
 }
+
 .header h1 {
   font-size:60px;
   font-family: Yeseva One;
@@ -42,31 +24,31 @@
 
 }
 
-.box p{
-  z-index: 2;
-  padding-top: 30px;
-  font-family: Yeseva One
+.content{
+  padding-bottom: 200px;
 }
 
-.copy-right-sec{
+.footer{
   padding: 1.8rem;
   background: #C2E0EF;
   color: #3f4053;
   text-align: center;
-  position: absolute;
+  position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
   height: 80px;
-  outline-style:solid
-
+  outline-style:solid;
+  clear: both;
 }
 
-.copy-right-sec a{
+
+.footer a{
   color: #3f4053;
   font-weight: 600;
   font-family: Yeseva One;
 }
+
 
 a{
   text-decoration:none;
